<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.movie.NewMovieFragment" >
    <data>
        <variable
            name="viewmodel"
            type="com.example.laboratorio5.ui.movie.MovieViewModel" />
    </data>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/billboard_background">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/billboard_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_gap"
        android:text="@string/new_movie_text"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="@dimen/big_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:background="@color/card_background"
        android:text="@={viewmodel.name}"
        android:hint="@string/name_text_hint"
        android:minHeight="48dp"
        android:padding="@dimen/default_gap"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/categoryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:background="@color/card_background"
        android:hint="@string/cateogory_text_hint"
        android:text="@={viewmodel.category}"
        android:minHeight="48dp"
        android:padding="@dimen/default_gap"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:background="@color/card_background"
        android:textColor="@color/white"
        android:hint="@string/description_text_hint"
        android:text="@={viewmodel.description}"
        android:minHeight="48dp"
        android:padding="@dimen/default_gap"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryEditText" />

    <EditText
        android:id="@+id/calificationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:background="@color/card_background"
        android:hint="@string/calificacion_text_hint"
        android:text="@={viewmodel.qualification}"
        android:textColor="@color/white"
        android:minHeight="48dp"
        android:padding="@dimen/default_gap"
        android:inputType="number"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <Button
        android:id="@+id/submit_action_button"
        android:layout_width="wrap_content"
        android:onClick="@{()->viewmodel.createMovie()}"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background"
        android:layout_marginTop="@dimen/big_gap"
        android:text="@string/submit_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calificationEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>